# Breakout4

./: CMakeLists.txt  README.md  breakout4_1440x1080_englishHelpTextRelease.txt  breakout4_1440x1080_frenchHelpTextRelease.txt  changes.txt  compileSourcesHowTo.txt  runCmake.sh
breakout4/: CMakeLists.txt  runCmake.sh
breakout4/bash/: listCommonFiles.sh  listEverything.sh  listGameFiles.sh  listGameSaveAndLoad.sh  listGenericFiles.sh  listSDL2_wrapperFiles.sh  listWxEditor.sh  listWxSavesEditor.sh  make_x64_x86.sh
breakout4/bash/lists/: gameHeaders.txt  gameSources.txt
breakout4/executables/game/: CMakeLists.txt
breakout4/executables/game/sources/: main.cpp
breakout4/executables/wxLevelEditor/: CMakeLists.txt
breakout4/libs/consts/: CMakeLists.txt
breakout4/libs/gameSaveAndLoad/: CMakeLists.txt
executables/game/: CMakeLists.txt
executables/game/sources/: main.cpp
executables/wxLevelEditor/: CMakeLists.txt
executables/wxLevelEditor/sources/appStart/: main.cpp  main.h
executables/wxLevelEditor/sources/consts/: buttonEventsID.h  constexprScreen.h  pathsConsts.h
executables/wxLevelEditor/sources/pathsStrings/: pathsFunctions.cpp  pathsFunctions.h
executables/wxSavesEditor/: CMakeLists.txt
executables/wxSavesEditor/sources/appStart/: appStartData.cpp  appStartData.h  main.cpp
executables/wxSavesEditor/sources/consts/: consts.h
executables/wxSavesEditor/sources/data/: fileLoading.cpp  fileLoading.h  fileSaving.cpp  fileSaving.h  gameSavePath.cpp  gameSavePath.h  gameSlots.cpp  gameSlots.h
executables/wxSavesEditor/sources/interface/: bagBonusesInterface.cpp  bagBonusesInterface.h  gameObjectsInterface.cpp  gameObjectsInterface.h  headersInterface.cpp  headersInterface.h  menuBar.cpp  menuBar.h  menuItemsID.h  myFrame.cpp  myFrame.h
libraries/commonFiles/: CMakeLists.txt
libraries/commonFiles/sources/appStart/: miniScreenConsts.h  miniScreenGui.cpp  miniScreenGui.h
libraries/commonFiles/sources/consts/: constPaths.h  constexprScreen.h  fontsConsts.h  gridOffsetCoord.h  sdlColors.h  sdlMixerConsts.h  squareSize.h
libraries/commonFiles/sources/types/: brickData.cpp  brickData.h  essentialsStruct.cpp  essentialsStruct.h  pi.h  spriteSize.cpp  spriteSize.h
libraries/consts/: CMakeLists.txt
libraries/consts/sources/consts/: duelsConstexpr.h  duelsGridConsts.h  duelsSounds.h  hellConsts.h  onePlayerBonusesConsts.h  onePlayerGridConsts.h  onePlayerLevelConsts.h  onePlayerMenuItems.h  onePlayerSounds.h  optionsLanguageConsts.h  rimsConsts.h  singlePlayerDemoConsts.h
libraries/demosLibrary/: CMakeLists.txt
libraries/duelsGame/: CMakeLists.txt
libraries/gameCommon/: CMakeLists.txt
libraries/gameCommon/sources/cheating/: checkCheatingFile.cpp  checkCheatingFile.h
libraries/gameCommon/sources/explosions/: allExplosions.cpp  allExplosions.h  entityExplosion.cpp  entityExplosion.h  explosionLoader.cpp  explosionLoader.h
libraries/gameCommon/sources/fireBall/: fireBallDrawData.cpp  fireBallDrawData.h  fireBallDrawer.cpp
libraries/gameCommon/sources/hellSkulls/: skullData.cpp  skullData.h  skullDrawer.cpp
libraries/gameCommon/sources/pathsAndRects/: pathNodes.cpp  pathNodes.h  pathZoneRects.cpp  pathZoneRects.h
libraries/gameCommon/sources/pausedTimesCounter/: pausedTimesCounter.cpp  pausedTimesCounter.h
libraries/gameCommon/sources/pinguins/: pinguinConsts.h  pinguinDrawData.cpp  pinguinDrawData.h
libraries/gameCommon/sources/rackets/: racketData.cpp  racketData.h  racketDrawer.cpp  racketDrawer.h
libraries/gameCommon/sources/rectCollisions/: activeWithStaticObjectCollision.cpp  activeWithStaticObjectCollision.h  brickGridCollisions.cpp  brickGridCollisions.h  colObjMvCenterAndPosWithColRect.cpp  colObjMvCenterAndPosWithColRect.h  monsterCollisionsWithRect.cpp  monsterCollisionsWithRect.h  objMoveWRectCollide.cpp  objMoveWithRectCollisions.cpp  objMoveWithRectCollisions.h  positionCheck.cpp  positionCheck.h  processBouncing.cpp  processBouncing.h  rectLoader.cpp  rectLoader.h
libraries/gameCommon/sources/stalactites/: onePlayerStalactiteData.cpp  onePlayerStalactiteData.h  racketFreezesDurationsLoader.cpp  stalactitesData.cpp  stalactitesData.h  stalactitesDrawer.cpp
libraries/gameCommon/sources/steamData/: steamSample.cpp  steamSample.h
libraries/gameCommon/sources/time/: intervalAndRandomTimeHappening.cpp  intervalAndRandomTimeHappening.h
libraries/gameSaveAndLoad/: CMakeLists.txt
libraries/gameSaveAndLoad/sources/crossLevel/: levelsInfos.cpp  levelsInfos.h  playerData.cpp  playerData.h
libraries/gameSaveAndLoad/sources/exceptions/: readErrorExcept.cpp  readErrorExcept.h  writeErrorExcept.cpp  writeErrorExcept.h
libraries/gameSaveAndLoad/sources/gameSlots/: gameSlotData.cpp  gameSlotData.h  slotConsts.h
libraries/gameSaveAndLoad/sources/loading/: loadData.cpp
libraries/gameSaveAndLoad/sources/saving/: saveData.cpp  saveData.h
libraries/onePlayerInGame/: CMakeLists.txt
libraries/onePlayerInGame/sources/bonusesShop/: shopContext.cpp  shopContext.h  shopInterface.cpp  shopInterface.h
libraries/onePlayerInGame/sources/gamePaused/: gameInPause.cpp  gameInPause.h  gamePausedGUI.cpp  gamePausedGUI.h
libraries/onePlayerInGame/sources/inputConfig/: inputConfigContext.cpp  inputConfigContext.h  inputThings.cpp  inputThings.h  staticGraphics.cpp  staticGraphics.h
libraries/onePlayerInGame/sources/levelEnd/: completeLevelInterface.cpp  completeLevelInterface.h  levelEndContext.cpp  levelEndContext.h
libraries/onePlayerInGame/sources/levelsContexts/: antarcticContext.cpp  antarcticContext.h  hellContext.cpp  hellContext.h  stdLevelContext.cpp  stdLevelContext.h
libraries/onePlayerInGame/sources/seeNextLevel/: seeNextLevelContext.cpp  seeNextLevelContext.h
libs/commonFiles/: CMakeLists.txt
libs/commonFiles/sources/appStart/: miniScreenGui.h
libs/commonFiles/sources/consts/: constPaths.h  squareSize.h
libs/commonFiles/sources/types/: essentialsStruct.h
libs/consts/: CMakeLists.txt
libs/consts/sources/consts/: rimsConsts.h  (+1 more)
libs/gameSaveAndLoad/: CMakeLists.txt
libs/spriteMoveLib/: CMakeLists.txt
(+1192 files in other folders)
